Remove window's fixed width and apply its style from css

--- a/data/application.css
+++ b/data/application.css
@@ -14,3 +14,11 @@ decoration:backdrop {
         0 3px 6px alpha (#000, 0.23),
         0 14px 28px transparent;
 }
+
+stack {
+    padding: 40px 60px;
+}
+
+.last-entry {
+    padding-bottom: 25px;
+}
